<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_info_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:id="@+id/textView2"
            android:layout_columnWeight="1"
            android:text="@string/stop_id" />

        <TextView
            android:id="@+id/stop_id"
            android:layout_columnWeight="2"
            android:text="[id]"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_columnWeight="1"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:text="[address]"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/slots_total" />

        <TextView
            android:id="@+id/slots_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:text="[total]"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/slots_used" />

        <TextView
            android:id="@+id/slots_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="[used]"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/slots_free" />

        <TextView
            android:id="@+id/slots_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:text="[free]"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/coordinates" />

        <TextView
            android:id="@+id/coords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:text="[coords]"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </GridLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ListView
        android:id="@+id/report_list"
        android:layout_width="match_parent"
        android:layout_height="136dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <ImageButton
            android:id="@+id/new_report_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </LinearLayout>

</LinearLayout>