<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/report_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="@color/colorAccent"
            app:srcCompat="@drawable/delete_white"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/report_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/save_white"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/report_subject" />

        <EditText
            android:id="@+id/report_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/report_subject"
            android:text="@string/description" />

        <EditText
            android:id="@+id/report_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_weight="0.19"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/report_desc"
            android:text="@string/type"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Spinner
            android:id="@+id/report_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView9"
            android:entries="@array/report_type_values" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/report_type"
            android:text="@string/status"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <Spinner
            android:id="@+id/report_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView12"
            android:entries="@array/report_status_values" />

</RelativeLayout>